--- a/notebooks/ObservationsQ2.ipynb
+++ b/notebooks/ObservationsQ2.ipynb
@@ -39,7 +39,15 @@
    "outputs": [],
    "source": [
     "# Data Science\n",
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Geospatial\n",
+    "import geopandas as gpd\n",
+    "\n",
+    "# Plotting\n",
+    "import folium\n",
+    "from folium.plugins import HeatMap, MousePosition"
    ]
   },
   {
@@ -56,9 +64,7 @@
    "outputs": [],
    "source": [
     "# Location\n",
-    "locations1 = pd.read_csv('../CheckPoints/Locations1_Clean.csv', parse_dates=['Timestamp'], index_col=0)\n",
-    "locations2 = pd.read_csv('../CheckPoints/Locations2_Clean.csv', parse_dates=['Timestamp'], index_col=0)\n",
-    "locations = pd.concat([locations1, locations2])\n",
+    "locations = pd.read_csv('../CheckPoints/Locations_Clean.csv', parse_dates=['Timestamp'], index_col=0)\n",
     "# Purchase Data\n",
     "buys = pd.read_csv('../CheckPoints/Buys_Clean.csv', parse_dates=['timestamp'], index_col=0)"
    ]
